Использовал mixin Теперь цвета в виде переменных Создал в папке types файл characters.ts; Импортирую ICharacter в HomeView Создал в папке api файл characterApi.ts Создал в папке store файл characterStore.ts Улучшил HomeView.vue

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 #В Vite env переменные должны обязательно начинаться с VITE_
 
 VITE_BACKEND_URL=https://jsonplaceholder.typicode.com/
+VITE_BASE_API_URL=https://rickandmortyapi.com
